unpackaged/main/default/objects/Renewal_Price_Report__c/Renewal_Price_Report__c.object-meta.xml
<CustomObject>
    <label>Renewal Price Report</label>
    <nameField>
        <displayFormat>RPR{000}</displayFormat>
        <label>Renewal Price Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Price Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>