unpackaged/main/default/objects/Renewal_Price_Report__c/fields/Membership_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiry_Date__c</fullName>
    <description>The renewal price report is for the following membership expiry date.</description>
    <inlineHelpText>The renewal price report is for the following membership expiry date.</inlineHelpText>
    <label>Membership Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>