unpackaged/main/default/objects/Renewal_Price_Report__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Renewal Price Reports</relationshipLabel>
    <relationshipName>Renewal_Price_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>