unpackaged/main/default/objects/Renewal_Price_Report__c/fields/Total_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Inc_VAT__c</fullName>
    <label>Total Inc VAT</label>
    <summarizedField>Renewal_Price_Line__c.Total_Inc_VAT__c</summarizedField>
    <summaryForeignKey>Renewal_Price_Line__c.Renewal_Price_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>