unpackaged/main/default/objects/Renewal_Price_Report__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <summarizedField>Renewal_Price_Line__c.VAT__c</summarizedField>
    <summaryForeignKey>Renewal_Price_Line__c.Renewal_Price_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>